# AgenticIDE

./: .gitignore  CLAUDE.md
.claude/commands/: assignment.md
09/ed9a36deac/: metadata.json
16/87c5597917/: metadata.json
17/f684421fab/: metadata.json
24/05dbad7548/: metadata.json
28/ee965ef7be/: metadata.json
29/cd61c286a1/: metadata.json
2b/8b903be025/: metadata.json
2b/e729fe0d12/: metadata.json
3c/68d7b86cee/: metadata.json
3d/bb7a65bd9c/: metadata.json
48/a439da008b/: metadata.json
57/5b7371ed6a/: metadata.json
8a/d43a8f0b1d/: metadata.json
9f/11fd42fe24/: metadata.json
9f/21997b6074/: metadata.json
9f/71b1a96ffe/: metadata.json
9f/dbecc04ca4/: metadata.json
_shared/: .env.example  AGENTS.md  ASSIGNMENT_EXECUTION_PROTOCOL.md  LESSONS_LEARNED.md  PRE_SUBMIT_CHECKLIST.md  README_5sections.md  SETUP.md  agent-architecture.md
case-01-session-backend/: ASSIGNMENT.md  README.md  main.py  pyproject.toml
case-01-session-backend/.claude/agents/: builder.md  reviewer.md
case-01-session-backend/.claude/commands/: assignment.md
case-01-session-backend/efood/: AGENTS.md
case-01-session-backend/src/: guardrails.py  llm.py  main.py  models.py  routes.py  store.py
case-01-session-backend/tests/: test_e2e.py  test_guardrails.py
case-01-session-second/: .gitignore  README.md  pyproject.toml
case-01-session-second/efood/: AGENTS.md
case-01-session-second/src/: auth.py  config.py  deps.py  errors.py  guardrails.py  llm.py  main.py  models.py  repository.py  routes.py  service.py  sqlite_repository.py  store.py
case-01-session-second/tests/: conftest.py  memory_repository.py  test_audit_debug.py  test_e2e.py  test_guardrails.py
case-02-session/: .gitignore  AGENTS.md  CODEX_PROMPTS.md  README.md  SPEC.md  assignment.md  pyproject.toml
case-02-session/.claude/agents/: builder.md
case-02-session/glovo/: AGENTS.md  sample_diff.patch
case-02-session/src/: auth.py  db.py  db_models.py  deps.py  errors.py  exceptions.py  guardrails.py  guards.py  llm.py  logging_config.py  main.py  models.py  repository.py  routes.py  schemas.py  service.py  sqlite_repository.py
case-02-session/tests/: conftest.py  memory_repository.py  test_audit_debug.py  test_e2e.py  test_guardrails.py
case-03-context/: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  assignment.md  pyproject.toml
case-03-context/src/: __init__.py  audit_routes.py  main.py  mock_data.py  models.py  permissions.py  routes.py  store.py  tools.py
case-03-context/tests/: test_audit.py  test_routes.py
case-04-orchestrator/: .env.example  AGENTS.md  CODEX_PROMPTS.md  Makefile  README.md  README2.md  SPEC.md  pyproject.toml
case-04-orchestrator/src/: guardrails.py  main.py  models.py  routes.py  schemas.py  store.py
case-04-orchestrator/tests/: conftest.py  test_guardrails.py  test_routes.py
(+130 files in other folders)
