[project]
name = "case-02-session"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20.0",
    "anthropic>=0.100.0",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=25.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
