[project]
name = "case-03-context"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.100.0",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
